# enterprise-rag

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  enterprise_rag_directory_structure.md  pyproject.toml
alembic/versions/: 001_add_tenant_id_to_models.py
deployments/grafana/dashboards/: rag-overview.json
deployments/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  secrets.yaml  service.yaml
deployments/prometheus/: prometheus.yml
docs/: DEPLOYMENT_MODELS.md  ENHANCEMENTS.md  agents.md
docs/architecture/: Enterprise_RAG_Technical_Architecture.docx  Knowledge_Graph_RAG_Architecture.docx  MultiAgent_RAG_Orchestration.docx  MultiModal_RAG_Architecture_Addendum.docx
scripts/setup/: init_postgres.sql
src/: app.py  main.py
src/agents/: __init__.py  base.py
src/agents/citation/: __init__.py  citation_agent.py
src/agents/critic/: __init__.py  critic_agent.py
src/agents/formatter/: __init__.py  formatter_agent.py
src/agents/planner/: __init__.py  planner_agent.py
src/agents/retriever/: __init__.py  retriever_agent.py
src/agents/synthesizer/: __init__.py  synthesizer_agent.py
src/agents/verifier/: __init__.py  verifier_agent.py
src/agents/workflows/: __init__.py  orchestrator.py
src/api/middleware/: __init__.py  error_handler.py  logging.py  rate_limit.py  tenant.py
src/api/routes/: __init__.py  admin.py  documents.py  health.py  query.py
src/api/services/: __init__.py  rag_pipeline.py  retrieval_service.py
src/auth/: __init__.py  api_key.py  audit.py  dependencies.py  jwt.py  models.py  rbac.py
src/core/: __init__.py  config.py  deployment.py  exceptions.py  features.py  logging.py  tenant.py  types.py
src/generation/: __init__.py
src/generation/llm/: __init__.py  anthropic.py  base.py  factory.py  local.py  openai.py
src/generation/prompts/: __init__.py  templates.py
src/ingestion/: __init__.py
src/ingestion/chunking/: __init__.py  base.py  recursive.py  sentence.py
src/ingestion/embeddings/: __init__.py  base.py  openai.py
src/ingestion/multimodal/: __init__.py  audio.py  base.py  document.py  image.py
src/ingestion/processors/: __init__.py  base.py  docx.py  html.py  pdf.py  registry.py  text.py
src/knowledge_graph/: __init__.py  rag.py
src/knowledge_graph/extraction/: __init__.py  entities.py  pipeline.py  relationships.py
src/knowledge_graph/query/: __init__.py  cypher.py  search.py  traversal.py
src/knowledge_graph/storage/: __init__.py  base.py  neo4j.py
src/observability/: __init__.py  metrics.py  middleware.py  tracing.py
src/retrieval/: __init__.py
src/retrieval/context/: __init__.py  assembler.py
src/retrieval/filters/: __init__.py  metadata.py
src/retrieval/multimodal/: __init__.py  fusion.py  search.py
src/retrieval/query/: __init__.py  expansion.py  hyde.py
src/retrieval/reranking/: __init__.py  base.py  cross_encoder.py  llm_reranker.py
src/retrieval/search/: __init__.py  hybrid.py  sparse.py  vector.py
src/storage/: __init__.py  base.py  isolation.py
src/storage/cache/: __init__.py  redis.py
src/storage/document/: __init__.py  database.py  models.py  repository.py
src/storage/vector/: __init__.py  qdrant.py
tests/: conftest.py
tests/integration/: test_api_tenant.py  test_deployment_modes.py  test_rag_pipeline.py  test_tenant_isolation.py  test_vector_isolation.py
tests/unit/agents/: test_base.py  test_citation.py  test_critic.py  test_formatter.py  test_orchestrator.py  test_planner.py  test_retriever.py  test_synthesizer.py  test_verifier.py
tests/unit/api/: test_health.py  test_query.py
tests/unit/auth/: test_api_key.py  test_audit.py  test_dependencies.py  test_jwt.py  test_models.py  test_rbac.py
tests/unit/core/: test_config.py  test_deployment.py  test_exceptions.py  test_features.py  test_logging.py  test_tenant.py  test_types.py
tests/unit/generation/: __init__.py  test_llm.py  test_llm_factory.py  test_local_llm.py  test_prompts.py
tests/unit/ingestion/: __init__.py  test_chunking.py  test_embeddings.py  test_processors.py
tests/unit/knowledge_graph/: __init__.py  test_entities.py  test_query.py  test_rag.py  test_relationships.py  test_storage.py
tests/unit/multimodal/: __init__.py  test_audio.py  test_document.py  test_image.py  test_retrieval.py
(+15 files in other folders)
